feat: add buy handler

--- a/package.json
+++ b/package.json
@@ -13,15 +13,25 @@
     "lint": "run-s lint:tsc lint:prettier lint:eslint",
     "lint:eslint": "eslint --fix \"src/**/*.ts\"",
     "lint:prettier": "prettier --write .",
-    "lint:tsc": "tsc --noEmit"
+    "lint:tsc": "tsc --noEmit",
+    "test": "vitest --run",
+    "test:ci": "vitest --run --coverage"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.3.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.0",
+    "@types/ws": "^8.5.14",
+    "@vitest/coverage-v8": "3.0.4",
     "eslint": "^9.19.0",
     "eslint-plugin-mist3rbru": "^0.6.4",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
+    "prisma": "^6.3.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.4"
   }
 }
